# origin

./: .gitignore
Advanced programming/Coursovik/Parser/: Parser.sln
Advanced programming/Lesson_1/Task_1/: Task_1.sln
Advanced programming/Lesson_1/Task_2/: Task_2.sln
Advanced programming/Lesson_1/Task_3/: Task_3.sln
Advanced programming/Lesson_2/Task_1/: Task_1.sln
Advanced programming/Lesson_2/Task_2/: Task_2.sln
Advanced programming/Lesson_3/Task_1/: Task_1.sln
Advanced programming/Lesson_3/Task_2/: Task_2.sln
Advanced programming/Lesson_4/Task_1/: CMakeLists.txt  ListNode_main.cpp  Test_ListNode.cpp
Advanced programming/Lesson_4/Task_2/: CMakeLists.txt  ListNode.h  ListNode_main.cpp  Test_ListNode.cpp
Advanced programming/Lesson_5/Task_1/: Task_1.sln
Advanced programming/Lesson_5/Task_2/: Task_2.sln
Advanced programming/Lesson_5/Task_3/: Task_3.sln
Advanced programming/Lesson_6/Task_1/: Task_1.sln
Advanced programming/Lesson_6/Task_2/: Task_2.sln
Advanced programming/Lesson_7/Task_1/: Task_1.sln
Advanced programming/Lesson_7/Task_2/: Task_2.sln
Advanced programming/Lesson_8/Task_1/: Task_1.sln
Advanced programming/Lesson_8/Task_2/: Task_2.sln
Advanced programming/Lesson_8/Task_3/: Task_3.sln
Algo-homeworks/Lesson_1/Task_2/: Task_2.sln
Basic programming/Cursovic/Race/: Boots_AllTerrain.cpp  Broom.h  CMakeLists.txt  Eagle.h  Magic_carpet.cpp  Magic_carpet.h  Race.cpp
Basic programming/Lesson_10/Task_2/: CMakeLists.txt
Basic programming/Lesson_10/Task_2/Figure/: CMakeLists.txt
Basic programming/Lesson_10/Task_2/Figure/Quadrangle/: Square.cpp
Basic programming/Lesson_10/Task_2/Figure/Triangle/: CMakeLists.txt  Triangle.cpp
Basic programming/Lesson_11/Task_3/: CMakeLists.txt  LeaverDll.cpp  LeaverDll.h
Basic programming/Lesson_11/Task_5/: CMakeLists.txt  Isosceles_triangle.h  Parallelogram.h  Phomb.h  Right_triangle.h  Square.h  Triangle.h
Basic programming/Lesson_2/Task_1/: Task_1.sln
Basic programming/Lesson_2/Task_2/: Task_2.cpp  (+1 more)
Cursovic/Race/: Boots_AllTerrain.h  Broom.cpp  Camel.cpp  Camel.h  CamelFast.cpp  CamelFast.h  Eagle.cpp  Functions.cpp  Functions.h  Krahotabl.cpp  Krahotabl.h  Race.sln  Transport.cpp  Transport.h
DB/Lesson_5/ClassDataBase/: CMakeLists.txt  main.cpp
DB/Lesson_6/: Lesson_6.sln
Diplom/SearchEngine/: SearchEngine.ini
Diplom/SearchEngine/SearchEngine/: CMakeLists.txt  SearchEngine.cpp  SearchEngine.ini  SearchEngine.vcxproj  output.csv  output.txt  pramCMake.txt
Diplom/SearchEngine/SearchEngine/Resurs/include/sch_engine/: processing_functions.h
Diplom/SearchEngine/SearchEngine/Resurs/lib/: charset.lib  iconv.lib  libcrypto.lib  libecpg.lib  libecpg_compat.lib  libpgcommon.lib  libpgport.lib  libpgtypes.lib  libpq.lib  libssl.lib  libxml2.lib  lz4.lib  pkgconf.lib
Diplom/SearchEngine/SearchEngine/Resurs/libxml2/: config.msvc  configure.js  rcVersion.h
Diplom/SearchEngine/SearchEngine/Resurs/libxml2/include/libxml/: xmlversion.h
Diplom/SearchEngine/SearchEngine/Resurs/libxml2/int.msvc/: libxml2.res
Diplom/SearchEngine/SearchEngine/Resurs/libxml2/lib/: libxml2.lib  libxml2d.lib
Diplom/SearchEngine/SearchEngine/Resurs/libxml2/lib/cmake/libxml2-2.13.3/: libxml2-config-version.cmake  libxml2-config.cmake  libxml2-export.cmake
Diplom/SearchEngine/SearchEngine/Resurs/libxml2/lib/pkgconfig/: libxml-2.0.pc
Diplom/SearchEngine/SearchEngine/Resurs/src/sch_engine/: processing_functions.cpp
Lesson_10/Task_2/: Task_2.cpp
Lesson_10/Task_2/Figure/Quadrangle/: CMakeLists.txt  Parallelogram.h  Phomb.cpp  Square.h
Lesson_11/Task_3/: LeaverDll.cpp  LeaverExe.cpp
Lesson_11/Task_4/: Task_4.sln
Lesson_11/Task_5/: Equilateral_triangle.h  Figure.h  FigureExe.cpp  Quadrangle.h  Rectangle.cpp  Rectangle.h  Right_triangle.cpp
Lesson_2/Task_1/: Task_1.cpp  Task_1.vcxproj
Lesson_2/Task_2/: Task_2.sln
Lesson_2/Task_3/: Task_3.cpp  Task_3.sln
Lesson_3/Task_1/: Task_1.sln  Task_1.vcxproj
Lesson_3/Task_2/: Task_2.cpp  Task_2.sln  Task_2.vcxproj
Lesson_4/Task_1/: Task_1.cpp  Task_1.vcxproj
Lesson_4/Task_2/: Task_2.vcxproj
Lesson_5/Task_1/: Task_1.cpp  Task_1.sln
Lesson_5/Task_2/: Task_2.cpp  Task_2.sln
Lesson_5/Task_3/: Task_3.cpp  Task_3.vcxproj
Lesson_6/Task_1/: Task_1.sln  Task_1.vcxproj
Lesson_6/Task_2/: Counter.h  Task_2.vcxproj
Lesson_6/Task_3/: Isosceles_triangle.h  Parallelogram.cpp  Phomb.cpp  Rectangle.cpp  Right_triangle.h  Square.cpp
Lesson_7/Task_1/: Task_1.cpp  Task_1.sln
Lesson_7/Task_2/: Task_2.sln  Task_2.vcxproj
Lesson_8/Task_1/: Task_1.cpp  Task_1.vcxproj
Lesson_8/Task_2/: Equilateral_triangle.cpp  FigureException.h  Isosceles_triangle.cpp  Phomb.h  Quadrangle.cpp  Right_triangle.cpp  Task_2.cpp  Triangle.h
Lesson_9/Task_1/: Task_1.cpp  Task_1.sln  Task_1.vcxproj
Multithreading/Coursovik/: Coursovik.sln
Multithreading/Lesson_5/Task_2/task_2/: CMakeLists.txt  Dockerfile  main.cpp
NumberWords/NumberWords/: Logfile.txt  MyList.cpp  MyList.h  NumberWords.cpp  NumberWords.vcxproj  ResultPairs.txt  WordsList.txt
Qt/Lesson_2/: CMakeLists.txt  main.cpp
Qt/Lesson_3/: CMakeLists.txt  dialog_log.cpp  dialog_log.h  dialog_log.ui  main.cpp  mainwindow.cpp  mainwindow.h  mainwindow.ui
Qt/Lesson_4/: CMakeLists.txt  mainwindow.cpp  mainwindow.h  mainwindow.ui
Qt/Lesson_5/: CMakeLists.txt  mainwindow.cpp  mainwindow.h  mainwindow.ui  stopwatch.cpp  stopwatch.h
Qt/Lesson_6/: CMakeLists.txt  ExampleRace.cpp  ExampleRace.h  mainwindow.cpp  mainwindow.h
Qt/Lesson_8/: CMakeLists.txt  database.cpp  database.h  dbdata.cpp  mainwindow.cpp  mainwindow.h  mainwindow.ui
Qt/course_work/: CMakeLists.txt  database.cpp  database.h  dbdata.cpp  dbdata.h  dialogstatistics.cpp  dialogstatistics.h  dialogstatistics.ui  images.qrc  main.cpp  mainwindow.cpp  mainwindow.h  mainwindow.ui  qcomboboxmodel.cpp  qcomboboxmodel.h  statisticbar.cpp  statisticbar.h  statisticplot.cpp  statisticplot.h  Матрица проверки требований.xlsx
UE/C++Part1/: CppBaseActor.cpp  CppBaseActor.h
drawBmp/drawBmp/: drawBmp.cpp  drawBmp.vcxproj  work_with_BMP.cpp  work_with_BMP.h
(+651 files in other folders)
